--- a/.env.example
+++ b/.env.example
@@ -21,9 +21,9 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=bravoure-db
 DB_PORT=3306
-DB_DATABASE=bravoure
+DB_DATABASE=bravoure_db
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -63,3 +63,5 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+YOUTUBE_API_KEY=""
