--- a/.env.example
+++ b/.env.example
@@ -25,7 +25,7 @@ DB_HOST=bravoure-db
 DB_PORT=3306
 DB_DATABASE=bravoure_db
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -39,7 +39,7 @@ QUEUE_CONNECTION=database
 
 CACHE_STORE=database
 # CACHE_PREFIX=
-
+CACHE_TTL=300
 MEMCACHED_HOST=127.0.0.1
 
 REDIS_CLIENT=phpredis
